--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Quick-scale-figma-plugin",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Simple plugin which add specified scaling actions - good for assign keyboard shortcuts tos",
   "main": "code.js",
   "scripts": {
@@ -9,6 +9,7 @@
   "author": "",
   "license": "",
   "devDependencies": {
-    "@figma/plugin-typings": "^1.25.0"
+    "@figma/plugin-typings": "^1.108.0",
+    "typescript": "^5.8.2"
   }
 }
